// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Breadcrumb No Styles 1`] = `
<ul
  className="xxx-breadcrumb"
  role="menu"
>
  <li
    className="xxx-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="xxx-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="xxx-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="xxx-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="xxx-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="xxx-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
</ul>
`;

exports[`Storyshots Component API/Breadcrumb Primary 1`] = `
<ul
  className="fd-breadcrumb"
  role="menu"
>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
</ul>
`;

exports[`Storyshots Component API/Breadcrumb With url property 1`] = `
<ul
  className="fd-breadcrumb"
  role="menu"
>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
  <li
    className="fd-breadcrumb__item"
    role="menuitem"
    tabIndex="-1"
  >
    <a
      className="fd-breadcrumb__link"
      href="#"
      tabIndex="0"
    >
      Link Text
    </a>
  </li>
</ul>
`;
